# ChangeLog for app-misc/workrave
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/workrave/ChangeLog,v 1.67 2010/07/09 09:13:18 pacho Exp $

  09 Jul 2010; Pacho Ramos <pacho@gentoo.org>
  -files/workrave-1.8.4-nls_macros.patch, -workrave-1.8.5.ebuild,
  -files/workrave-1.8.5-gcc43.patch,
  -files/workrave-1.8.5-libsigc++-2.2.2.patch, workrave-1.9.1-r1.ebuild,
  +files/workrave-1.9.1-gtkmm_api.patch:
  Fix build with new gtkmm due API break reported in bug #327471 (by
  Laurento Frittella). Remove old.

  26 Jun 2010; <nixnut@gentoo.org> workrave-1.9.1-r1.ebuild:
  ppc stable #310261

  24 Jun 2010; Pacho Ramos <pacho@gentoo.org> workrave-1.9.1-r1.ebuild:
  stable amd64, bug 310261

  16 Jun 2010; Christian Faulhammer <fauli@gentoo.org> workrave-1.9.1-r1.ebuild:
  stable x86, bug 310261

*workrave-1.9.1-r1 (16 Jun 2010)

  16 Jun 2010; Pacho Ramos <pacho@gentoo.org> -workrave-1.9.0.ebuild,
  -files/workrave-1.9.0-compilation-fixes.patch,
  -files/workrave-1.9.0-dbus-glib.xml, -files/workrave-1.9.0-gcc43.patch,
  -files/workrave-1.9.0-gcc44.patch, -files/workrave-1.9.0-gui.xml,
  -files/workrave-1.9.0-nosoundplayer.patch,
  -files/workrave-1.9.0-parallel-make.patch,
  -files/workrave-1.9.0-service.in, -workrave-1.9.1.ebuild,
  +workrave-1.9.1-r1.ebuild, +files/workrave-1.9.1-nogst-crash.patch:
  Revision bump to include a patch fixing crashes with USE=-gstreamer on
  some systems (bug #316637; thanks to Joachim Bartosik, Christian
  Faulhammer and Rob Caelers). Remove old testing.

*workrave-1.9.1 (04 Mar 2010)

  04 Mar 2010; Gilles Dartiguelongue <eva@gentoo.org>
  +workrave-1.9.1.ebuild:
  Version bump, bug #299188 and bug #285881.

  20 Nov 2009; Samuli Suominen <ssuominen@gentoo.org> workrave-1.8.5.ebuild,
  workrave-1.9.0.ebuild:
  Remove kde-base/arts:3.5 and kde-base/kdelibs:3.5 support.

  06 Aug 2009; Samuli Suominen <ssuominen@gentoo.org> workrave-1.9.0.ebuild,