@@ -5,6 +5,5 @@ DIST workrave-1.9.1.tar.gz 6594737 RMD160 1a1215358b0f47a6ab3535caa9aa746dcf071a
 DIST workrave-1.9.2.tar.gz 6685860 RMD160 5fe7ed7a773b838a9c6e4285caeb97ec23e11ef5 SHA1 60f7bfeccf88094b3400402604cd0b3356aff87f SHA256 7607a8a7de644f99a744cb10c648814fd9781370a81b2fb85d26e9df292c19ae
 EBUILD workrave-1.9.1-r2.ebuild 2224 RMD160 d4e9a73c194241a5b7d69b3c23e7395a8339c221 SHA1 3f7b435c8806e417a911394e282fd5eb10ee3c6e SHA256 26bde456219fb763cd15af231a8cc80e3493e260bc4ace618f134771d347305f
 EBUILD workrave-1.9.2.ebuild 1878 RMD160 9d9dc51c8547e7d036e9d032359116e657c3f0a5 SHA1 e551977e2e2dfa511651387add7bffe0f303f611 SHA256 34643ab186d9774479b3a27f20aad1f785a04d9fae351845a78276703250b378
-MISC ChangeLog 10843 RMD160 c817d2bde8e430ada021d0c6b360faf5e6c99838 SHA1 6b2f79a5bb39e403e2834ac70477910cd1bf1988 SHA256 95e67dbf563d181bf968fc9fbecd54deee5316b9b77d90b7823614aabfac2272
+MISC ChangeLog 11006 RMD160 14172a0855235cf31d2e01f7c756fb5281771f73 SHA1 cf9fb4f83f4c5701d47c1144eb61cb2a8be83d62 SHA256 dfcee08140c6285f0cec165dab14e978e52e624662a402753fff4dea194bb16f
 MISC metadata.xml 520 RMD160 36e3d789618562107f56faf8171d4c3adcd362ea SHA1 2a3ef0c57f60f739323f6422d9ebc443ed5514b6 SHA256 f614aee5f506fa3a49b3a4e9e8a20940c1b9795eca18c6d444b26048aa1c6fbc
-MISC workrave-1.9.2.ebuild~ 1871 RMD160 52bb15039ce45895a8291406b1644700ae4f0e96 SHA1 40338033d60cc4d1495b1ce79864afa77ba292ab SHA256 08b0a563b9caa50acdd7cc33e68c5670b919163bc436bc9fd354bca60226a5a0
